--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO = mongodb+srv://rupesh:rupesh@cluster0.crxvh2n.mongodb.net/booking?retryWrites=true&w=majority
 JWT = NSbArmbOW/UTDQlpzRUuHrtbWDs194SsA1Jv5AOpU9w=
+PORT = 8000
