--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "engines": {
-    "node": "16.14.0"
+    "node": "16.14.0",
+    "npm" : "8.3.1"
   },
   "main": "index.js",
   "scripts": {
