--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "engines": {
     "node": "16.14.0",
-    "npm" : "8.3.1"
+    "npm": "8.3.1"
   },
   "main": "index.js",
   "scripts": {
@@ -21,7 +21,6 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.6",
-    "nodemon": "^2.0.16"
+    "mongoose": "^6.3.6"
   }
 }
